Create requests list

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -2,5 +2,6 @@
   "Name": "نام",
   "Title": "عنوان",
   "Username": "نام کاربری",
-  "Password": "گذرواژه"
+  "Password": "گذرواژه",
+  "Form": "فرم"
 }
