--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -3,5 +3,31 @@
   "Title": "عنوان",
   "Username": "نام کاربری",
   "Password": "گذرواژه",
-  "Form": "فرم"
+  "Form": "فرم",
+  "Forms": "فرم ها",
+  "SignOut": "خروج از سیستم",
+  "Add": "افزودن",
+  "AddForm": "افزودن فرم",
+  "AddField": "افزودن فیلد",
+  "Type": "نوع",
+  "String": "رشته متنی",
+  "Number": "عدد صحیح",
+  "Date": "تاریخ",
+  "Boolean": "شرطی",
+  "Widget": "ویجت",
+  "Required": "فیلد اجباری است",
+  "Readonly": "فیلد خواندنی است",
+  "PlaceHolder": "متن کمکی",
+  "Default": "پیش فرض",
+  "Description": "توضیحات",
+  "DisplayConditionBasedOn": "شرط نمایش براساس",
+  "Field": "فیلد",
+  "Condition": "شرط",
+  "Value": "مقدار",
+  "File": "فایل",
+  "ComputationalField": "فیلد محاسباتی",
+  "Return": "بازگشت",
+  "Cancel": "انصراف",
+  "Datetime": "تاریخ و زمان",
+  "Time": "زمان"
 }
