Change form builder component

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -29,5 +29,8 @@
   "Return": "بازگشت",
   "Cancel": "انصراف",
   "Datetime": "تاریخ و زمان",
-  "Time": "زمان"
+  "Time": "زمان",
+  "Equal": "برابر با",
+  "NotEqual": "مخالف با",
+  "NotEmpty": "خالی نباشد"
 }
