--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -32,5 +32,6 @@
   "Time": "زمان",
   "Equal": "برابر با",
   "NotEqual": "مخالف با",
-  "NotEmpty": "خالی نباشد"
+  "NotEmpty": "خالی نباشد",
+  "Process": "فرآیند"
 }
