Set request  states

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -33,5 +33,6 @@
   "Equal": "برابر با",
   "NotEqual": "مخالف با",
   "NotEmpty": "خالی نباشد",
-  "Process": "فرآیند"
+  "Process": "فرآیند",
+  "States": "وضعیت ها"
 }
