Create page workflow

--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -34,5 +34,6 @@
   "NotEqual": "مخالف با",
   "NotEmpty": "خالی نباشد",
   "Process": "فرآیند",
-  "States": "وضعیت ها"
+  "States": "وضعیت ها",
+  "Workflow": "جریان کاری"
 }
